--- a/1_eda_games.ipynb
+++ b/1_eda_games.ipynb
@@ -284,10 +284,13 @@
    "cell_type": "code",
    "source": [
     "def get_exp_avg(df, team, hl = 3):\n",
-    "    sched = get_schedule(df, team).filter(regex = r'(datetime)|(venue)|(.*(opp|team).*)').drop(['team', 'opp', 'datetime', 'venue'], axis=1)\n",
+    "    sched = get_schedule(df, team).filter(regex = r'(datetime)|(venue)|(.*(opp|team).*)').drop(['opp', 'venue'], axis=1)\n",
+    "    team = sched.pop('team')\n",
+    "    dt = sched.pop('datetime')\n",
     "    sched = sched.drop(sched.filter(regex = r'^opp.*(wins|losses)$').columns, axis = 1)\n",
     "    sched = sched.ewm(halflife = hl).mean().dropna()\n",
     "    sched = sched.rename(lambda x: x+f'_exp_{hl}', axis = 1)\n",
+    "    sched = pd.concat([dt, team, sched], axis = 1)\n",
     "    return sched\n"
    ],
    "id": "55f14e104ba93d4",
@@ -305,7 +308,31 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": "df_clean.home.unique()",
+   "id": "8a3bc47b6fd84990",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "exp_df = get_exp_avg(df_clean, 'BOS', hl = 3).rename(columns = {'team':'home'}).reset_index().set_index(['game', 'home']).rename(lambda x: 'home_'+x, axis = 1)\n",
+    "df_clean.merge(exp_df, left_index = True)"
+   ],
+   "id": "d926f3540ea72467",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def process_df(df, cols = ['home', 'away'], hl = 3, window = 3):\n",
+    "    for team in df.home.unique()\n",
+    "        exp_df = get_exp_avg(df = df, team = team, hl = hl)\n",
+    "        roll_df = get_rolling_averages(df = df, team = team, window = window)"
+   ],
    "id": "7045a1ae46ebe480",
    "outputs": [],
    "execution_count": null
