--- a/1_eda_games.ipynb
+++ b/1_eda_games.ipynb
@@ -260,37 +260,18 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "def get_rolling_averages(df, team, window = 3):\n",
-    "    sched = get_schedule(df, team).filter(regex = r'(datetime)|(venue)|(.*(opp|team).*)').drop(['team', 'opp', 'datetime', 'venue'], axis=1)\n",
-    "    sched = sched.drop(sched.filter(regex = r'^opp.*(wins|losses)$').columns, axis = 1)\n",
-    "    sched = sched.rolling(closed = 'left', window = window).mean().dropna()\n",
-    "    sched = sched.rename(lambda x: x+f'_avg_{window}', axis = 1)\n",
-    "    return sched"
-   ],
-   "id": "b89af0ab641928ac",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "get_rolling_averages(df_clean, 'BOS')",
-   "id": "e633d90f1b2ce05a",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "def get_exp_avg(df, team, hl = 3):\n",
-    "    sched = get_schedule(df, team).filter(regex = r'(datetime)|(venue)|(.*(opp|team).*)').drop(['opp', 'venue'], axis=1)\n",
+    "def get_avg(df, team, hl = 3, window = 3, type = 'exp'):\n",
+    "    sched = get_schedule(df, team).filter(regex = r'(datetime)|(venue)|(.*(opp|team).*)').drop(['datetime', 'opp', 'venue'], axis=1)\n",
     "    team = sched.pop('team')\n",
-    "    dt = sched.pop('datetime')\n",
+    "    #dt = sched.pop('datetime')\n",
     "    sched = sched.drop(sched.filter(regex = r'^opp.*(wins|losses)$').columns, axis = 1)\n",
-    "    sched = sched.ewm(halflife = hl).mean().dropna()\n",
-    "    sched = sched.rename(lambda x: x+f'_exp_{hl}', axis = 1)\n",
-    "    sched = pd.concat([dt, team, sched], axis = 1)\n",
+    "    if type == 'exp':\n",
+    "        sched = sched.ewm(halflife = hl).mean().dropna()\n",
+    "        sched = sched.rename(lambda x: x+f'_exp_avg_{hl}', axis = 1)\n",
+    "    elif type == 'roll':\n",
+    "        sched = sched.rolling(closed = 'left', window = window, min_periods = 1).mean().dropna()\n",
+    "        sched = sched.rename(lambda x: x+f'_roll_avg_{window}', axis = 1)\n",
+    "    sched = pd.concat([team, sched], axis = 1)\n",
     "    return sched\n"
    ],
    "id": "55f14e104ba93d4",
@@ -300,7 +281,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "get_exp_avg(df_clean, 'BOS', hl = 3)",
+   "source": "get_avg(df_clean, 'BOS', hl = 3, type = 'exp')",
    "id": "86972bb1b50fc58e",
    "outputs": [],
    "execution_count": null
@@ -316,10 +297,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "exp_df = get_exp_avg(df_clean, 'BOS', hl = 3).rename(columns = {'team':'home'}).reset_index().set_index(['game', 'home']).rename(lambda x: 'home_'+x, axis = 1)\n",
-    "df_clean.merge(exp_df, left_index = True)"
-   ],
+   "source": "exp_df = get_avg(df_clean, 'BOS', hl = 3).rename(columns = {'team':'home'}).set_index('home', append = True).rename(lambda x: 'home_'+x, axis = 1)",
    "id": "d926f3540ea72467",
    "outputs": [],
    "execution_count": null
@@ -327,13 +305,59 @@
   {
    "metadata": {},
    "cell_type": "code",
+   "source": "exp_df",
+   "id": "d4aab4f6e089e4f7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": [
-    "def process_df(df, cols = ['home', 'away'], hl = 3, window = 3):\n",
-    "    for team in df.home.unique()\n",
-    "        exp_df = get_exp_avg(df = df, team = team, hl = hl)\n",
-    "        roll_df = get_rolling_averages(df = df, team = team, window = window)"
+    "temp = df_clean.set_index('home', append = True).join(exp_df, how = 'left').reset_index(level = ['home'])\n",
+    "temp[temp.home == 'BOS']"
    ],
-   "id": "7045a1ae46ebe480",
+   "id": "65e021711b48643",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def process_df(df, hls = [3,10], windows = [10]):\n",
+    "    avgs = {}\n",
+    "\n",
+    "\n",
+    "    for venue in ['home', 'away']:\n",
+    "        for hl in hls:\n",
+    "            s = f'{venue}_exp_{hl}'\n",
+    "            print(s)\n",
+    "            avgs[s] = pd.DataFrame()\n",
+    "            for team in df.home.unique():\n",
+    "                d = get_avg(df = df, team = team, hl = hl, type = 'exp').rename(columns = {'team':f'{venue}'}).set_index(f'{venue}', append = True).rename(lambda x: f'{venue}_'+x, axis = 1)\n",
+    "                d = df.set_index(venue, append = True).join(d, how = 'inner').reset_index(level = f'{venue}').drop(df.columns, axis = 1)\n",
+    "                avgs[s] = pd.concat([avgs[s], d])\n",
+    "        for w in windows:\n",
+    "            s = f'{venue}_roll_{hl}'\n",
+    "            print(s)\n",
+    "            avgs[s] = pd.DataFrame()\n",
+    "            for team in df.home.unique():\n",
+    "                d = get_avg(df = df, team = team, window = w, type = 'roll').rename(columns = {'team':f'{venue}'}).set_index(f'{venue}', append = True).rename(lambda x: f'{venue}_'+x, axis = 1)\n",
+    "                d = df.set_index(venue, append = True).join(d, how = 'inner').reset_index(level = f'{venue}').drop(df.columns, axis = 1)\n",
+    "                avgs[s] = pd.concat([avgs[s], d])\n",
+    "    return pd.concat([df] + list(avgs.values()), axis = 1)\n",
+    "\n"
+   ],
+   "id": "65ad187674d61af5",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "process_df(df_clean)",
+   "id": "73ab2200ab69a6b8",
    "outputs": [],
    "execution_count": null
   }
