--- a/0_cleaning.ipynb
+++ b/0_cleaning.ipynb
@@ -13,7 +13,9 @@
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "from mlb.Data import Data"
+    "from mlb.Data import Data\n",
+    "\n",
+    "import re\n"
    ],
    "outputs": [],
    "execution_count": null
@@ -46,7 +48,6 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import re\n",
     "def normalize_columns(cols):\n",
     "    new_cols = []\n",
     "    for col in cols.copy():\n",
@@ -209,22 +210,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "df_num = df_clean.select_dtypes(include = [float, int, 'datetime64[ns, UTC]']).filter(regex = r'.+(?<!id)$').drop(['odds','o_u', 'datetime', 'attendance', 'capacity'], axis=1)",
-   "id": "ee8a15c56a648652",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "df_num.dtypes",
-   "id": "b800697b6653568c",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
    "source": [
     "def get_schedule(df, team):\n",
     "    df_home =  df[(df.home == team)]\n",
@@ -289,41 +274,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "df_clean.home.unique()",
-   "id": "8a3bc47b6fd84990",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "exp_df = get_avg(df_clean, 'BOS', hl = 3).rename(columns = {'team':'home'}).set_index('home', append = True).rename(lambda x: 'home_'+x, axis = 1)",
-   "id": "d926f3540ea72467",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "exp_df",
-   "id": "d4aab4f6e089e4f7",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "temp = df_clean.set_index('home', append = True).join(exp_df, how = 'left').reset_index(level = ['home'])\n",
-    "temp[temp.home == 'BOS']"
-   ],
-   "id": "65e021711b48643",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
    "source": [
     "def process_df(df, hls = [3,10], windows = [10]):\n",
     "    avgs = {}\n",
@@ -358,6 +308,242 @@
    "cell_type": "code",
    "source": "process_df(df_clean)",
    "id": "73ab2200ab69a6b8",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "hitters = pd.read_csv('data/hittersByGame.csv')",
+   "id": "4599cbae50fe5942",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "hitters.columns = normalize_columns(hitters.columns)",
+   "id": "7672432b0a2de01b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "hitters = hitters.drop('h_ab', axis = 1)",
+   "id": "5182bb0b34e937e7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "hitters = hitters.set_index('game')",
+   "id": "2f393fbb7a68e7e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "hitters = hitters[hitters.position != 'TEAM']",
+   "id": "556776d20435a2a0",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "hitters",
+   "id": "60b19adf274306a7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "33a87319e7d4784d",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "pitchers = pd.read_csv('data/pitchersByGame.csv')\n",
+    "pitchers.columns = normalize_columns(pitchers.columns)\n",
+    "pitchers = pitchers.set_index(['game', 'pitcher_id'])\n",
+    "pitchers =  pitchers[pitchers.pitchers != 'TEAM']\n",
+    "pitchers = pd.concat([pitchers.pc_st.str.extract(r'(?:\\d+|--)-(\\d+|--)').rename(columns = {0:'st'}), pitchers], axis = 1)\n",
+    "pitchers.st = pitchers.st.replace('--',np.nan)\n",
+    "extra = {'loss': r'\\(L',\n",
+    "         'win': r'\\(W',\n",
+    "         'hold': r'\\(H',\n",
+    "         'save': r'\\(S'}\n",
+    "for k, v in extra.items():\n",
+    "    pitchers[k] = pitchers.extra.str.match(v).fillna(False)\n",
+    "\n",
+    "d = pitchers.ip.astype(str).str.extract(r'(\\d)\\.(\\d)').astype(int)\n",
+    "pitchers['outs'] = d[0] * 3 + d[1]\n",
+    "pitchers.drop(['pc_st', 'ip', 'extra'], axis = 1)"
+   ],
+   "id": "64818e537bd4e535",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "pitches = pd.read_csv('data/pitches.csv')\n",
+    "pitches.columns = normalize_columns(pitches.columns)"
+   ],
+   "id": "5430e29d1fcab49b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "pitches = pitches.set_index(['game', 'event_id', 'num'])",
+   "id": "cabe4f44fad0b9e7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "pb = pitches.play_bases.astype(str)\n",
+    "pitches['runner_on_1'] = pb.str.match(r'\\d*1')\n",
+    "pitches['runner_on_2'] = pb.str.match(r'\\d*2')\n",
+    "pitches['runner_on_3'] = pb.str.match(r'\\d*3')"
+   ],
+   "id": "13d072d455a45310",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "pitches.mph = pitches.mph.replace('--', np.nan).astype(float)",
+   "id": "542c1654595220a2",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "pitches = pd.concat([pitches, pitches.play_field.str.extract(r'top: (\\d+\\.*\\d*)px; right: (\\d+\\.*\\d*)px;').astype(float).rename(columns = {0:'play_field_top', 1:'play_field_right'})],axis = 1)",
+   "id": "eea2cb453405c56b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "pitches",
+   "id": "79f7e2e920570f6d",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "pitches = pd.concat([pitches, pitches.play_hitzone.str.extract(r'top: (\\d+\\.*\\d*)px; right: (\\d+\\.*\\d*)px;').astype(float).rename(columns = {0:'play_hitzone_top', 1:'play_hitzone_right'})],axis = 1)",
+   "id": "81a0c70f733c0deb",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "pitches = pd.concat([pitches, pitches.inning.str.extract(r'(\\w+) (\\d+).+').rename(columns = {1:'inning_num', 0:'inning_topbottom'})], axis = 1)",
+   "id": "9e25fcb9a4f01e2d",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "pitches.type.unique()\n",
+    "#Fastball: fastball, four-seam fb, two-seam fb, cutter, sinker\n",
+    "#Offspeed: slider, changeup, curve, splitter, knuckleball, screwball, knuckle curve, eephus pitch, slow curve\n",
+    "#Intentional ball: intentional ball, pitch out\n",
+    "#Breaking ball: slider, curve, splitter, knuckleball, screwball, forkball, knuckle curve, slow curve\n",
+    "#knuckle balls: knuckleball, knuckle curve, forkball"
+   ],
+   "id": "c4dc592a38cddc24",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "pitches.type = pitches.type.replace({'--': np.nan, 'Unknown': np.nan})",
+   "id": "85f3017067145af9",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "fastball = r'Fastball|.*FB|Cutter|Sinker'\n",
+    "offspeed = r'Slider|Changeup|.*Curve|Splitter|Knuckle.*|Screwball|Forkball|Eephus.*'\n",
+    "intentional = r'Intentional Ball|Pitch Out'\n",
+    "breaking = r'Slider|.*Curve|Splitter|Knuckle.*|Screwball|Forkball'\n",
+    "knuckle = r'Knuckle.*|Forkball'\n",
+    "pitches.type.replace(fastball,'fast', regex = True).replace(offspeed,'offspeed', regex = True).replace(intentional,'intentional', regex = True).unique()"
+   ],
+   "id": "69366e1112b4faf3",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "pitches['fastball'] = pitches.type.str.match(fastball)\n",
+    "pitches['offspeed'] = pitches.type.str.match(offspeed)\n",
+    "pitches['intentional'] = pitches.type.str.match(intentional)\n",
+    "pitches['breaking'] = pitches.type.str.match(breaking)\n",
+    "pitches['knuckle'] = pitches.type.str.match(knuckle)"
+   ],
+   "id": "9560f9386beae3bc",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "pitches",
+   "id": "d877bd8f17fa8435",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "pitches.pitch.value_counts()\n",
+    "#Ball: Ball, Intentional Ball\n",
+    "#Strike: Strike Looking, Strike Swinging, 'Strikeout Batter Safe, Passed Ball|Error'\n",
+    "#Foul: Foul Ball, Foul Out, Error On A Dropped Foul Ball\n",
+    "#Hit:(Bunt) Single, (Ground Rule|Bunt) Double, Triple, (I.T.P.) Home Run\n",
+    "#Out:"
+   ],
+   "id": "5aa9744afb9ddc03",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "8c4590bc2cc7f19d",
    "outputs": [],
    "execution_count": null
   }
